Change to unmodifiable class names